test/ClangImporter/CoreMIDI_test.code
// RUN: %target-typecheck-verify-language %clang-importer-sdk -enable-objc-interop

import CoreMIDI

fn test() -> String {
  immutable s: String = MIDIGetNumberOfDevices() // expected-error {{cannot convert value of type 'Int' to specified type 'String'}}
  return s
}
